<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >
    <LinearLayout
    android:id="@+id/ll1"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
        <Button
        android:id="@+id/weather"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weather"
        android:background="@drawable/btn"
        />
        <Button
        android:id="@+id/buscard"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/buscard"
        android:background="@drawable/btn"
        />
        <Button
        android:id="@+id/fund"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fund"
        android:background="@drawable/btn"
        />
        <Button
        android:id="@+id/traceloc"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/traceloc"
        android:background="@drawable/btn"
        />
    </LinearLayout>
    <android.support.v4.view.ViewPager  
        android:id="@+id/viewpager"  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"  
        android:flipInterval="30"  
        android:persistentDrawingCache="animation"/> 
</LinearLayout>
