<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <EditText
            android:id="@+id/buscardnumbertext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:phoneNumber="true"
            android:hint="@string/buscardnumber"
            />
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TableRow>
                <Button
                    android:id="@+id/buscardnumberadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buscardnumberadd"
                    android:layout_weight="1"
                    android:background="@drawable/btn"
                    />
                <Button
                    android:id="@+id/buscardnumberdel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buscardnumberdel"
                    android:layout_weight="1"
                    android:background="@drawable/btn"
                    />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:id="@+id/buscards"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/querybuscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/querybuscard"
            android:background="@drawable/btn"
            />
        <LinearLayout
        android:id="@+id/buscardinfo"    
        android:orientation="vertical"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        />
    </LinearLayout>
</ScrollView>
